<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circular_button_background"
            android:text="&lt;"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:textSize="30sp" />


        <TextView
            android:text="@string/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/inputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title" />

        <TextView
            android:text="@string/date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/inputDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_date_time"
            android:focusable="false"
            android:clickable="true" />

        <TextView
            android:text="@string/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/inputLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_location" />

        <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <TextView
            android:text="@string/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/inputCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_category" />

        <TextView
            android:text="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/inputPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/teal_700"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
